--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Shop</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="contact">
+      <div class="container">
+        <p class="contact__tel">
+          <i class="icons icon--tel"></i> (0) 101 0000 888
+        </p>
+        <p class="contact__mail">
+          <i class="icons icon--email"></i>info@yourdomain.com
+        </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="header">
+        <div class="header__logo">Fashion Shop</div>
+        <ul class="header-menu">
+          <li class="header-menu__list">
+            <a href="#" class="header-menu__item">home</a>
+          </li>
+          <li class="header-menu__list">
+            <a href="#" class="header-menu__item">shop</a>
+          </li>
+          <li class="header-menu__list">
+            <a href="#" class="header-menu__item">blog</a>
+          </li>
+          <li class="header-menu__list">
+            <a href="#" class="header-menu__item">about us</a>
+          </li>
+          <li class="header-menu__list">
+            <a href="#" class="header-menu__item">contact us</a>
+          </li>
+        </ul>
+        <ul class="header-btn">
+          <li class="header-btn__list"><i class="icons icon--user"></i></li>
+          <li class="header-btn__list"><i class="icons icon--search"></i></li>
+          <li class="header-btn__list"><i class="icons icon--basker"></i></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="slider">
+      <div class="slider__text">
+        <p class="slider__text-first">Sale</p>
+        <p class="slider__text-second">Up to 50% Off</p>
+      </div>
+      <img src="./img/slider/bg.png" alt="slider" width="100%" height="100%" />
+    </div>
+  </body>
 </html>
