--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
     <header>
       <div class="contact">
         <div class="container">
-          <p class="contact__tel">
+          <a href="tel:(0) 101 0000 888" class="contact__tel">
             <i class="icons icon--tel"></i> (0) 101 0000 888
-          </p>
-          <p class="contact__mail">
+          </a>
+          <a href="mailto:info@yourdomain.com" class="contact__mail">
             <i class="icons icon--email"></i>info@yourdomain.com
-          </p>
+          </a>
         </div>
       </div>
 
@@ -292,13 +292,13 @@
         <li class="footer__list">
           <div class="logo">Fashion Shop</div>
           <div class="footer__pay">
-            <img
+            <!-- <img
               class="footer__pay-img"
               src="./img/footer/Mastercard.png"
               alt=""
-            />
-            <img class="footer__pay-img" src="./img/footer/Paypal.png" alt="" />
-            <img class="footer__pay-img" src="./img/footer/Visa.png" alt="" />
+            /> -->
+            <!-- <img class="footer__pay-img" src="./img/footer/Paypal.png" alt="" />
+            <img class="footer__pay-img" src="./img/footer/Visa.png" alt="" /> -->
           </div>
         </li>
         <li class="footer__list">
