--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,10 @@
           />
           <div class="product__rate"></div>
           <div class="product__name">Embroidered Linen Shirt</div>
-          <div class="product__price">$30.50</div>
+          <div class="product__price">
+            <p class="product__price-new">$19.99</p>
+            <p class="product__price-old">$30.50</p>
+          </div>
           <button class="product__add">Add to Cart</button>
         </li>
         <li class="product__list">
@@ -85,7 +88,10 @@
           />
           <div class="product__rate"></div>
           <div class="product__name">Embroidered Linen Shirt</div>
-          <div class="product__price">$30.50</div>
+          <div class="product__price">
+            <p class="product__price-new">$19.99</p>
+            <p class="product__price-old">$30.50</p>
+          </div>
           <button class="product__add">Add to Cart</button>
         </li>
         <li class="product__list">
@@ -98,7 +104,10 @@
           />
           <div class="product__rate"></div>
           <div class="product__name">Embroidered Linen Shirt</div>
-          <div class="product__price">$30.50</div>
+          <div class="product__price">
+            <p class="product__price-new">$19.99</p>
+            <p class="product__price-old">$30.50</p>
+          </div>
           <button class="product__add">Add to Cart</button>
         </li>
         <li class="product__list">
@@ -111,7 +120,10 @@
           />
           <div class="product__rate"></div>
           <div class="product__name">Embroidered Linen Shirt</div>
-          <div class="product__price">$30.50</div>
+          <div class="product__price">
+            <p class="product__price-new">$19.99</p>
+            <p class="product__price-old">$30.50</p>
+          </div>
           <button class="product__add">Add to Cart</button>
         </li>
       </ul>
@@ -126,19 +138,19 @@
           <p class="saleTop__price">$30.50</p>
           <div class="saleTop__timer">
             <div class="saleTop__timer-day">
-              <p class="saleTop__timer-number">13</p>
+              <p class="saleTop__timer-number">00</p>
               <p class="saleTop__timer-char">day</p>
             </div>
             <div class="saleTop__timer-hour">
-              <p class="saleTop__timer-number">14</p>
+              <p class="saleTop__timer-number">00</p>
               <p class="saleTop__timer-char">hours</p>
             </div>
             <div class="saleTop__timer-min">
-              <p class="saleTop__timer-number">12</p>
+              <p class="saleTop__timer-number">00</p>
               <p class="saleTop__timer-char">minutes</p>
             </div>
             <div class="saleTop__timer-sec">
-              <p class="saleTop__timer-number">11</p>
+              <p class="saleTop__timer-number">00</p>
               <p class="saleTop__timer-char">seconds</p>
             </div>
           </div>
