add media checkpoint

--- a/src/index.html
+++ b/src/index.html
@@ -130,10 +130,18 @@
     </div>
 
     <div class="saleTop">
-      <div class="saleTop__content">
+      <div></div>
+      <div class="container saleTop__content">
         <div>
           <p class="saleTop__sale">Sale</p>
           <p class="saleTop__title">Deal of the Day <br />30% on Dresses</p>
+          <img
+            class="saleTop__image mobile tablet"
+            src="./img/content/saleTop1.png"
+            alt=""
+            width="900"
+            height="1000"
+          />
           <p class="saleTop__name">Pretty Thing Floral Skater Dress</p>
           <p class="saleTop__price">$30.50</p>
           <div class="saleTop__timer">
@@ -158,7 +166,7 @@
         </div>
       </div>
       <img
-        class="saleTop__image"
+        class="saleTop__image laptop"
         src="./img/content/saleTop1.png"
         alt=""
         width="900"
@@ -300,41 +308,43 @@
       </div>
     </div>
     <footer class="footer">
-      <ul class="footer__info">
-        <li class="footer__list">
-          <div class="logo">Fashion Shop</div>
-          <div class="footer__pay">
-            <!-- <img
+      <div class="container">
+        <ul class="footer__info">
+          <li class="footer__list">
+            <div class="logo">Fashion Shop</div>
+            <div class="footer__pay">
+              <!-- <img
               class="footer__pay-img"
               src="./img/footer/Mastercard.png"
               alt=""
             /> -->
-            <!-- <img class="footer__pay-img" src="./img/footer/Paypal.png" alt="" />
+              <!-- <img class="footer__pay-img" src="./img/footer/Paypal.png" alt="" />
             <img class="footer__pay-img" src="./img/footer/Visa.png" alt="" /> -->
-          </div>
-        </li>
-        <li class="footer__list">
-          <h3 class="footer__list-title">Customer Service</h3>
-          <a href="#" class="footer__link">About Us</a>
-          <a href="#" class="footer__link">F.A.Q.</a>
-          <a href="#" class="footer__link">My Account</a>
-          <a href="#" class="footer__link">Contact</a>
-        </li>
-        <li class="footer__list">
-          <h3 class="footer__list-title">Social</h3>
-          <a href="#" class="footer__link">Instagram</a>
-          <a href="#" class="footer__link">Twitter</a>
-          <a href="#" class="footer__link">Facebook</a>
-          <a href="#" class="footer__link">Pinterest</a>
-        </li>
-        <li class="footer__list">
-          <h3 class="footer__list-title">Contact Us</h3>
-          <a href="#" class="footer__link">Patricia C. Amedee 4401</a>
-          <a href="#" class="footer__link">+99 (0) 101 0000 888</a>
-          <a href="#" class="footer__link">info@yourdomain.com</a>
-        </li>
-      </ul>
-      <div class="footer__copyright">© 2018 ARTBEES All rights reserved.</div>
+            </div>
+          </li>
+          <li class="footer__list">
+            <h3 class="footer__list-title">Customer Service</h3>
+            <a href="#" class="footer__link">About Us</a>
+            <a href="#" class="footer__link">F.A.Q.</a>
+            <a href="#" class="footer__link">My Account</a>
+            <a href="#" class="footer__link">Contact</a>
+          </li>
+          <li class="footer__list">
+            <h3 class="footer__list-title">Social</h3>
+            <a href="#" class="footer__link">Instagram</a>
+            <a href="#" class="footer__link">Twitter</a>
+            <a href="#" class="footer__link">Facebook</a>
+            <a href="#" class="footer__link">Pinterest</a>
+          </li>
+          <li class="footer__list">
+            <h3 class="footer__list-title">Contact Us</h3>
+            <a href="#" class="footer__link">Patricia C. Amedee 4401</a>
+            <a href="#" class="footer__link">+99 (0) 101 0000 888</a>
+            <a href="#" class="footer__link">info@yourdomain.com</a>
+          </li>
+        </ul>
+        <div class="footer__copyright">© 2018 ARTBEES All rights reserved.</div>
+      </div>
     </footer>
   </body>
 </html>
