add hamburger menu on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -25,28 +25,44 @@
       <div class="container">
         <nav class="nav">
           <div class="logo">Fashion Shop</div>
-          <ul class="nav-menu">
-            <li class="nav-menu__list">
-              <a href="#" class="nav-menu__item">home</a>
-            </li>
-            <li class="nav-menu__list">
-              <a href="#" class="nav-menu__item">shop</a>
-            </li>
-            <li class="nav-menu__list">
-              <a href="#" class="nav-menu__item">blog</a>
-            </li>
-            <li class="nav-menu__list">
-              <a href="#" class="nav-menu__item">about us</a>
-            </li>
-            <li class="nav-menu__list">
-              <a href="#" class="nav-menu__item">contact us</a>
-            </li>
-          </ul>
-          <ul class="nav-btn">
-            <li class="nav-btn__list"><i class="icons icon--user"></i></li>
-            <li class="nav-btn__list"><i class="icons icon--search"></i></li>
-            <li class="nav-btn__list"><i class="icons icon--basker"></i></li>
-          </ul>
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul class="nav-menu" id="menu">
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">home</a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">shop</a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">blog</a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">about us</a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">contact us</a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">
+                  <i class="icons icon--user"> </i>
+                </a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">
+                  <i class="icons icon--search"> </i>
+                </a>
+              </li>
+              <li class="nav-menu__list">
+                <a href="#" class="nav-menu__item">
+                  <i class="icons icon--basker"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
