--- a/src/index.html
+++ b/src/index.html
@@ -329,13 +329,17 @@
           <li class="footer__list">
             <div class="logo">Fashion Shop</div>
             <div class="footer__pay">
-              <!-- <img
-              class="footer__pay-img"
-              src="./img/footer/Mastercard.png"
-              alt=""
-            /> -->
-              <!-- <img class="footer__pay-img" src="./img/footer/Paypal.png" alt="" />
-            <img class="footer__pay-img" src="./img/footer/Visa.png" alt="" /> -->
+              <img
+                class="footer__pay-img"
+                src="./img/footer/mastercard.png"
+                alt=""
+              />
+              <img
+                class="footer__pay-img"
+                src="./img/footer/paypal.png"
+                alt=""
+              />
+              <img class="footer__pay-img" src="./img/footer/visa.png" alt="" />
             </div>
           </li>
           <li class="footer__list">
